Add support for activity points

--- a/rrcommander.json5
+++ b/rrcommander.json5
@@ -10,8 +10,10 @@
       ],
       "minimum_rating": -1, // Minimum rating required to join the server. Set to -1 to disable.
       "minimum_reputation": 80, // Minimum reputation required to join the server. Set to -1 to disable.
+      "minimum_activity": -1, // Minimum activity score required to join the server. Set to -1 to disable.
       "reject_message_rating": "Kicked {0} due to insufficient rating ({1}/{2})", // Message to broadcast when someone with insufficient rating joins.
       "reject_message_reputation": "Kicked {0} due to insufficient reputation ({1}/{2})", // Message to broadcast when someone with insufficient reputation joins.
+      "reject_message_activity": "Kicked {0} due to insufficient activity ({1}/{2})", // Message to broadcast when someone with insufficient activity joins.
       "whitelisted_ids": [
         11962, // Koen van Hove
         786, // RS Keanos
@@ -50,7 +52,7 @@
             "7": 2, // Not serving a penalty
             "8": 1  // Disconnecting / Giving up before the end of a race
           },
-          "message": "Heeft een stop-and-go-straf toegekend voor het behalen van {1} incidentpunten aan {0}"
+          "message": "Er is een stop-and-go-straf toegekend voor het behalen van {1} incidentpunten aan {0}"
         },
         {
           "penalty": "slowdown", // drivethrough, slowdown, stopandgo
@@ -78,8 +80,10 @@
       ],
       "minimum_rating": -1, // Minimum rating required to join the server. Set to -1 to disable.
       "minimum_reputation": -1, // Minimum reputation required to join the server. Set to -1 to disable.
+      "minimum_activity": -1, // Minimum activity score required to join the server. Set to -1 to disable.
       "reject_message_rating": "", // Message to broadcast when someone with insufficient rating joins.
       "reject_message_reputation": "", // Message to broadcast when someone with insufficient reputation joins.
+      "reject_message_activity": "", // Message to broadcast when someone with insufficient activity joins.
       "whitelisted_ids": [
 
       ],
